# raffler

./: .eslintignore  .eslintrc.js  Anchor.toml  package.json  test.ts  tsconfig.json
app/: package-lock.json  package.json
app/src/: App.tsx  Body.tsx  constants.tsx
app/src/actions/: buyTicket.tsx
app/src/components/: loading.tsx  raffle.tsx
app/src/utils/: buyTicket.ts  pda.ts  raffle.ts  setup.ts
cli/: config.ts  helpers.ts
cli/commands/: buy-ticket.ts  create-nft-raffle.ts  create-raffle.ts  decide-nft-raffle.ts  init-state.ts
cli/output/: raffleConfig.ts
cli/types/: accounts.ts
examples/: new-raffle.json
programs/raffle/: Cargo.toml
programs/raffle/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/raffle/src/instructions/: buy_ticket.rs  close_ticket.rs  create_nft_raffle.rs  create_raffle.rs  decide_raffle.rs  init_state.rs  mod.rs  process_raffle.rs
tests/src/: raffle.ts  test-utils.ts
tests/src/helpers/: constants.ts  pda.ts  utils.ts
tests/src/idl/: raffle.ts
